# jsm-asset-mcp

./: .gitignore  GEMINI.md  README.md  gemini-extension.json  main.py  pyproject.toml
.github/workflows/: release.yml
jsm_asset_mcp/: __init__.py  cache.py  client.py  config.py  llm.py  schema.py  server.py  tools.py
tests/: test_config.py  test_gemini_extension.py  test_llm.py  test_release_workflow.py  test_server.py  test_tools.py
