[project]
name = "jsm-asset-mcp"
version = "0.1.0"
description = "MCP server for Jira Service Management Assets (Insight) API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.65",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
